Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100678

QML Runtime Tool help all option is not working

XMLWordPrintable

    • e5007fcc4 (dev), 6d196b757 (tqtc/lts-5.15), e38868ca9 (6.5), d59fd8557 (tqtc/lts-6.2)

      qml.exe help is not working properly. Normal help is working, but when trying to use --help-all option, the output does not match with the expectations. Below is output in Windows 10, Git CMD terminal. 

      D:\QtQSR2.0\5.15.7\mingw81_64>D:\QtQSR2.0\5.15.6\mingw81_64\bin\qml.exe --help
      Usage: D:\QtQSR2.0\5.15.6\mingw81_64\bin\qml.exe [options] [files...] [-- args...]Options:
        -?, -h, --help                   Displays help on commandline options.
        --help-all                       Displays help including Qt specific options.
        -v, --version                    Displays version information.
        -a, --apptype <core|gui|widget>  Select which application class to use.
                                         Default is gui.
        -I <path>                        Prepend the given path to the import paths.
        -f <file>                        Load the given file as a QML file.
        -c, --config <file>              Load the given built-in configuration or
                                         configuration file.
        --list-conf                      List the built-in configurations.
        --translation <file>             Load the given file as the translations
                                         file.
        --dummy-data <file>              Load QML files from the given directory as
                                         context properties.
        --desktop                        Force use of desktop OpenGL
                                         (AA_UseDesktopOpenGL).
        --gles                           Force use of GLES (AA_UseOpenGLES).
        --software                       Force use of software rendering
                                         (AA_UseSoftwareOpenGL).
        --scaling                        Enable High DPI scaling
                                         (AA_EnableHighDpiScaling).
        --no-scaling                     Disable High DPI scaling
                                         (AA_DisableHighDpiScaling).
        --quiet                          Suppress all output.
        --verbose                        Print information about what qml is doing,
                                         like specific file URLs being loaded.
        --slow-animations                Run all animations in slow motion.
        --fixed-animations               Run animations off animation tick rather
                                         than wall time.
        -r, --rhi <backend>              Use the Qt graphics abstraction (RHI)
                                         instead of OpenGL directly. Backend is one
                                         of: default, vulkan, metal, d3d11, gl
        -S <selector>                    Add selector to the list of
                                         QQmlFileSelectors.Arguments:
        files                            Any number of QML files can be loaded. They
                                         will share the same engine.
        args                             Arguments after '--' are ignored, but passed
                                         through to the application.arguments variable
                                         in QML.D:\QtQSR2.0\5.15.7\mingw81_64>D:\QtQSR2.0\5.15.6\mingw81_64\bin\qml.exe --help-all
      qml: No files specified. Terminating.
      

      See https://doc.qt.io/qt-5/qtquick-qml-runtime.html

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            assaarel Asmo Saarela (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: